# projectm-audio-source

./: CMakeLists.txt  README.md  dependencies_check.cmake
src/: CMakeLists.txt
src/Backend-Fake/: CMakeLists.txt  FakeAudioGenerator.cpp  FakeAudioGenerator.h  FakeBackend.cpp  FakeBackend.h  FakeCaptureThread.cpp  FakeCaptureThread.h
src/Backend-JACK/: CMakeLists.txt  JACKBackend.cpp  JACKBackend.h
src/Backend-PulseAudio/: CMakeLists.txt  PulseAudioBackend.cpp  PulseAudioBackend.h  PulseAudioDevice.cpp  PulseAudioDevice.h  PulseAudioServerConnection.cpp  PulseAudioServerConnection.h
src/Backend-SDL2/: CMakeLists.txt  SDL2AudioDevice.cpp  SDL2AudioDevice.h  SDL2Backend.cpp  SDL2Backend.h  SDL2Capture.cpp  SDL2Capture.h
src/Backend-WASAPI/: CMakeLists.txt  WASAPIBackend.cpp  WASAPIBackend.h
src/projectMAudioSource/: Backend.cpp  Backend.h  BackendList_Generated.h.in  Device.cpp  Device.h
src/projectMAudioSource/DynamicLibraryLoader/: DynamicLibraryLoader.cpp  DynamicLibraryLoader.h  DynamicLibraryLoaderImpl_dlopen.cpp  DynamicLibraryLoaderImpl_dlopen.h  DynamicLibraryLoaderImpl_windows.cpp  DynamicLibraryLoaderImpl_windows.h
